2004-03-05  Sven Neumann  <sven@gimp.org>
	* Makefile.am: fixed the newly added dependency.

	* *.po: updated based on an uptodate gimp-tips.xml.in.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12528 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/da.po
+++ b/tips/da.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GIMP tips\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
+"POT-Creation-Date: 2004-03-05 00:12+0100\n"
 "PO-Revision-Date: 2004-02-10 21:48+0100\n"
 "Last-Translator: Ole Laursen <olau@hardworking.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
@@ -47,8 +47,8 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:5
 #, fuzzy
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
 msgstr ""
 "<tt>Ctrl</tt>-træk med roteringsværktøjet vil begrænse rotationen til 15 "
 "graders vinkler."
@@ -79,8 +79,8 @@ msgstr ""
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
 "Hvis du aktiverer \"Dynamiske tastegenveje\" under indstillingerne, kan du "
 "omdefinere genvejstaster i menuerne. Bring en menu frem, peg på et menupunkt "
@@ -112,9 +112,9 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:11
 #, fuzzy
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
+"If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
+"with their current settings. You can use the Paintbrush in gradient mode or "
+"even the Eraser or the Smudge tool."
 msgstr ""
 "Hvis du bestryger en bane (Redigér-&gt;Bestryg bane), kan tegneværktøjerne "
 "bruges med deres aktuelle indstillinger. Du kan bruge malerpenslen i "
@@ -133,7 +133,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "De fleste udvidelsesmoduler arbejder på det aktive lag eller det aktive "
@@ -154,8 +154,8 @@ msgstr ""
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "Ikke alle effekter kan bruges på alle typer billeder. Dette bliver indikeret "
 "ved et gråtonet menupunkt. Du får måske bruge for at ændre billedtilstanden "
@@ -231,18 +231,6 @@ msgstr ""
 "den resulterende markering lige præcis røre hjælpelinjerne."
 
 #: tips/gimp-tips.xml.in.h:22
-#, fuzzy
-msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Du kan tegne simple firkanter eller cirkler med Rediger-&gt;Bestryg "
-"markering. Det bestryger kanten af den aktuelle markering. Mere komplekse "
-"figurer kan tegnes med baneværktøjet eller med Filtre-&gt;Generér-&gt;"
-"Figurer."
-
-#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
@@ -254,7 +242,7 @@ msgstr ""
 "tegnepunkt til den nuværende markørposition. Hvis du også trykker på "
 "<tt>Ctrl</tt>, tvinges linjen til at følge 15 graders vinkler."
 
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -266,12 +254,17 @@ msgstr ""
 "bevarer lagene og alle andre aspekter af dit igangværende arbejde. Når et "
 "projekt er færdigt, kan du gemme det som JPEG, PNG, GIF, ..."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
-"Du kan tilpasse og flytte en markering med træk med <tt>Alt</tt> holdt nede."
+"Du kan justere og genplacere en markering ved at bruge <tt>Alt</tt>-træk. "
+"Hvis dette får vinduet til at flytte sig, bruger din vindueshåndtering "
+"allerede <tt>Alt</tt>-tasten. Prøv at trykke på skiftetasten på samme tid."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -279,10 +272,10 @@ msgstr ""
 "Du kan tilpasse markeringsintervallet for udflydende markering ved at klikke "
 "og trække til højre eller venstre."
 
-#: tips/gimp-tips.xml.in.h:27
+#: tips/gimp-tips.xml.in.h:26
 #, fuzzy
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
@@ -290,7 +283,7 @@ msgstr ""
 "\"-vinduet lader dig arbejde på flere baner og så konvertere dem til "
 "markeringer."
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
@@ -298,7 +291,7 @@ msgstr ""
 "Du kan trække et lag fra \"Lag\"-vinduet og slippe det i værktøjskassen. "
 "Dette opretter et nyt billede som kun indeholder det lag."
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
@@ -307,6 +300,18 @@ msgstr ""
 "Du kan trække og slippe mange ting i Gimp'en. Hvis du f.eks. trækker en "
 "farve fra værktøjskassen eller fra en farvepalet og slipper det i et "
 "billede, vil billedet eller det markerede bliver fyldt ud med den farve."
+
+#: tips/gimp-tips.xml.in.h:29
+#, fuzzy
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr ""
+"Du kan tegne simple firkanter eller cirkler med Rediger-&gt;Bestryg "
+"markering. Det bestryger kanten af den aktuelle markering. Mere komplekse "
+"figurer kan tegnes med baneværktøjet eller med Filtre-&gt;Generér-&gt;"
+"Figurer."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -375,11 +380,7 @@ msgstr ""
 "markerede ved at tegne i billedet og klikke på knappen igen for at "
 "konvertere det tilbage til en normal markering."
 
-#~ msgid ""
-#~ "You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If "
-#~ "this makes the window move, your window manager uses the <tt>Alt</tt> key "
-#~ "already. Try pressing <tt>Shift</tt> at the same time."
+#~ msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
 #~ msgstr ""
-#~ "Du kan justere og genplacere en markering ved at bruge <tt>Alt</tt>-træk. "
-#~ "Hvis dette får vinduet til at flytte sig, bruger din vindueshåndtering "
-#~ "allerede <tt>Alt</tt>-tasten. Prøv at trykke på skiftetasten på samme tid."
+#~ "Du kan tilpasse og flytte en markering med træk med <tt>Alt</tt> holdt "
+#~ "nede."
