--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-05  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am: fixed the dependency.
+
 2004-03-04  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am: added a missing dependency that caused the
