--- a/tips/de.po
+++ b/tips/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp 1.3.17\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
+"POT-Creation-Date: 2004-03-05 00:12+0100\n"
 "PO-Revision-Date: 2003-07-08 01:53+0200\n"
 "Last-Translator: Sven Neumann <sven@gimp.org>\n"
 "Language-Team: German <de@li.org>\n"
@@ -43,9 +43,10 @@ msgstr ""
 "statt der Vordergrund- die Hintergrundfarbe verwendet."
 
 #: tips/gimp-tips.xml.in.h:5
+#, fuzzy
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
 msgstr ""
 "Wird mit dem Transformationswerkzeug im Rotationsmodus die <tt>Strg</tt>-"
 "Taste gedrückt, so können für den Winkel nur Vielfache von 15 Grad "
@@ -70,11 +71,12 @@ msgid ""
 msgstr ""
 
 #: tips/gimp-tips.xml.in.h:8
+#, fuzzy
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
 "Wenn in den Einstellungen \"Dynamische Tastaturkürzel\" aktiviert sind,\n"
 "können Tastaturkürzel einfach zugewiesen und verändert werden. Dazu\n"
@@ -101,9 +103,9 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:11
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
+"If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
+"with their current settings. You can use the Paintbrush in gradient mode or "
+"even the Eraser or the Smudge tool."
 msgstr ""
 
 #: tips/gimp-tips.xml.in.h:12
@@ -113,9 +115,10 @@ msgid ""
 msgstr ""
 
 #: tips/gimp-tips.xml.in.h:13
+#, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "Die meisten Plugins bearbeiten nur die aktive Ebene des aktuellen Bildes. In "
@@ -132,11 +135,12 @@ msgstr ""
 "werden..."
 
 #: tips/gimp-tips.xml.in.h:15
+#, fuzzy
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "Nicht alle Effekte können auf alle Bildtypen angewendet werden. Dies wird "
 "durch einen grauen Menüeintrag angezeigt. Es ist dann nötig, das Bild ins "
@@ -214,17 +218,6 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:22
 msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Einfache Formen wie Ellipsen und Rechtecke können gezeichnet werden, indem "
-"eine bestehende Selektion mit dem aktuellen Pinsel nachgezeichnet wird. Dazu "
-"steht der Befehl Bearbeiten-&gt;Nachfahren zur Verfügung. Komplexere Formen "
-"können mit dem GFig-Plugin (Filter-&gt;Render-&gt;Gfig) gezeichnet werden."
-
-#: tips/gimp-tips.xml.in.h:23
-msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
 "cursor position. If you also press <tt>Ctrl</tt>, the line will be "
@@ -235,7 +228,7 @@ msgstr ""
 "<tt>Shift</tt>-Taste gedrückt wird. Wird ausserdem <tt>Strg</tt> gedrückt, "
 "so wird der Winkel auf Vielfache von 15 Grad beschränkt."
 
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -247,13 +240,14 @@ msgstr ""
 "Kanäle und Hilfslinien abzuspeichern, steht das GIMP-eigene Format XCF (mit "
 "der Endung <tt>.xcf</tt>) zur Verfügung."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
-"Selektionen können mit gedrückter <tt>Alt</tt>-Taste verschoben werden, ohne "
-"dass ihr Inhalt mitverschoben wird."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -261,25 +255,37 @@ msgstr ""
 "Durch horizontales Verschieben der Maus kann beim Benutzen des Zauberstabs "
 "der Schwellwert für die Auswahl verändert werden."
 
-#: tips/gimp-tips.xml.in.h:27
+#: tips/gimp-tips.xml.in.h:26
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
 msgstr ""
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
 "fill the current image or selection with that color."
 msgstr ""
+
+#: tips/gimp-tips.xml.in.h:29
+#, fuzzy
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr ""
+"Einfache Formen wie Ellipsen und Rechtecke können gezeichnet werden, indem "
+"eine bestehende Selektion mit dem aktuellen Pinsel nachgezeichnet wird. Dazu "
+"steht der Befehl Bearbeiten-&gt;Nachfahren zur Verfügung. Komplexere Formen "
+"können mit dem GFig-Plugin (Filter-&gt;Render-&gt;Gfig) gezeichnet werden."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -336,3 +342,8 @@ msgid ""
 "by painting in the image and click on the button again to convert it back to "
 "a normal selection."
 msgstr ""
+
+#~ msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#~ msgstr ""
+#~ "Selektionen können mit gedrückter <tt>Alt</tt>-Taste verschoben werden, "
+#~ "ohne dass ihr Inhalt mitverschoben wird."
