--- a/tips/hr.po
+++ b/tips/hr.po
@@ -4,7 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gimp-tips \n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-05 00:12+0100\n"
 "PO-Revision-Date: 2004-02-09 20:24+0100\n"
 "Last-Translator: Robert Sedak <robert.sedak@sk.tel.hr>\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
@@ -44,8 +45,8 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:5
 #, fuzzy
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
 msgstr ""
 "<tt>Ctrl</tt>-povlačenje s alatom za rotaciju će ograničiti rotaciju na "
 "kutove koji su višekratnik s 15 stupnjeva."
@@ -76,8 +77,8 @@ msgstr ""
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
 "Nakon što u dijalogu za postavke omogućite dinamičke kratice s tipkovnice, "
 "moći ćete promijeniti kratice. To ćete napraviti podizanjem izbornika i "
@@ -111,9 +112,9 @@ msgstr ""
 
 #: tips/gimp-tips.xml.in.h:11
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
+"If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
+"with their current settings. You can use the Paintbrush in gradient mode or "
+"even the Eraser or the Smudge tool."
 msgstr ""
 
 #: tips/gimp-tips.xml.in.h:12
@@ -129,7 +130,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "Većina umetaka vrši izmjene na trenutnom sloju trenutno slike. U nekim "
@@ -150,8 +151,8 @@ msgstr ""
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "Ne mogu se svi efekti primijeniti na sve vrste slika. Ovo se označava "
 "onemogućenom stavkom izbornika. Možda je potrebno promijeniti režim slike na "
@@ -228,18 +229,6 @@ msgstr ""
 "dobijeni odabi automatski dodirnuti crtice."
 
 #: tips/gimp-tips.xml.in.h:22
-#, fuzzy
-msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Upotrebom Uređivanje-&gt;Iscrtaj možete crtati jednostavne kvadrate i "
-"krugove. Ovo iscrtava ruba trenutnog odabira pomoću aktivne četkice. "
-"Složeniji oblici se mogu crtati pomoću alata za putanje ili Filteri-&gt;"
-"Iscrtavanje-&gt;Gfig."
-
-#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
@@ -251,7 +240,7 @@ msgstr ""
 "pozicije pokazivača. Ako pritisnete <tt>Ctrl</tt>, moći ćete rotirati liniju "
 "pod kutom od 15°."
 
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -264,11 +253,18 @@ msgstr ""
 "spremljeni. Jednom kada završite projekt, možete ga sačuvati kao JPEG, PNG, "
 "GIF, ..."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
+"Možete prilagoditi i razmestiti odabir upotrebom <tt>Alt</tt>-povlačenja. "
+"Ukoliko se tada vaš prozor pomakne, onda vaš upravitelj prozorima već "
+"koristi <tt>Alt</tt> tipku. Pokušajte s pritiskom na <tt>Shift</tt> "
+"istovremeno."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -276,10 +272,10 @@ msgstr ""
 "Možete prilagoditi područje odabira za nejasni odabir ako kliknete i "
 "povlačite pokazivač lijevo i desno."
 
-#: tips/gimp-tips.xml.in.h:27
+#: tips/gimp-tips.xml.in.h:26
 #, fuzzy
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
@@ -287,7 +283,7 @@ msgstr ""
 "Dijalog za putanje dozvoljava rad s više putanja i pretvaranje istih u "
 "odabire."
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
@@ -296,7 +292,7 @@ msgstr ""
 "paletu alata. Na taj način će se napraviti nova slika koja sadrži samo taj "
 "sloj."
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
@@ -305,6 +301,18 @@ msgstr ""
 "Možete povući i ispustiti mnoge stvari u Gimpu. Na primjer, povlačenjem boje "
 "sa palete alata ili s palete boja i ispuštanjem na sliku, ispuniti će "
 "trenutnu sliku ili odabir odabranom bojom."
+
+#: tips/gimp-tips.xml.in.h:29
+#, fuzzy
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr ""
+"Upotrebom Uređivanje-&gt;Iscrtaj možete crtati jednostavne kvadrate i "
+"krugove. Ovo iscrtava ruba trenutnog odabira pomoću aktivne četkice. "
+"Složeniji oblici se mogu crtati pomoću alata za putanje ili Filteri-&gt;"
+"Iscrtavanje-&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -373,13 +381,3 @@ msgstr ""
 "„Brza maska“ na donjem lijevom dijelu prozora za prikaz slike. Promijenite "
 "odabir po želji bojenjem po slici i ponovo kliknite na gumb da bi se maska "
 "pretvorila nazad u običan odabir."
-
-#~ msgid ""
-#~ "You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If "
-#~ "this makes the window move, your window manager uses the <tt>Alt</tt> key "
-#~ "already. Try pressing <tt>Shift</tt> at the same time."
-#~ msgstr ""
-#~ "Možete prilagoditi i razmestiti odabir upotrebom <tt>Alt</tt>-povlačenja. "
-#~ "Ukoliko se tada vaš prozor pomakne, onda vaš upravitelj prozorima već "
-#~ "koristi <tt>Alt</tt> tipku. Pokušajte s pritiskom na <tt>Shift</tt> "
-#~ "istovremeno."
