--- a/tips/it.po
+++ b/tips/it.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
+"POT-Creation-Date: 2004-03-05 00:12+0100\n"
 "PO-Revision-Date: 2004-02-12 14:09+0100\n"
 "Last-Translator: MIke Vargas <ciao@volalibero.it> \n"
 "Language-Team: gimp.linux.it <it@li.org>\n"
@@ -53,8 +53,8 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:5
 #, fuzzy
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
 msgstr ""
 "Premendo <tt>Ctrl</tt> e trascinando il mouse mentre si usa lo strumento "
 "Rotazione, quest'ultima sarà forzata ad angoli di 15 gradi."
@@ -86,8 +86,8 @@ msgstr ""
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
 "Dopo aver attivato \"Scorciatoie da tastiera dinamiche\" nelle Preferenze, "
 "puoi riassegnare le scorciatoie da tastiera. Puoi farlo aprendo il menu, "
@@ -120,9 +120,9 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:11
 #, fuzzy
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
+"If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
+"with their current settings. You can use the Paintbrush in gradient mode or "
+"even the Eraser or the Smudge tool."
 msgstr ""
 "Se sbarri un tracciato (Modifica&gt;Sbarra), sono usate le impostazioni "
 "dello strumento di disegno corrente. Puoi usare il Pennello nella modalità "
@@ -142,7 +142,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "La maggior parte dei plug-in lavora sul livello attivo dell'immagine "
@@ -163,8 +163,8 @@ msgstr ""
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "Non tutti gli effetti possono essere applicati ad ogni tipo di immagine. In "
 "caso di impossibilità la corrispondente voce del menù sarà grigia. Per "
@@ -241,17 +241,6 @@ msgstr ""
 "guide: la selezione risultante toccherà le guide. "
 
 #: tips/gimp-tips.xml.in.h:22
-#, fuzzy
-msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Usando Modifica &gt;Sbarra potrai disegnare semplici quadrati o cerchi "
-"tracciando la selezione corrente con il pennello attivo. Forme più complesse "
-"possono essere disegnate con Filtri-&gt;Render&gt;Gfig."
-
-#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
@@ -263,7 +252,7 @@ msgstr ""
 "punto di disegno a quello corrente. Se premi anche il tasto <tt>Ctrl</tt>, "
 "la linea sarà forzata a rotazioni di 15 gradi."
 
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -275,11 +264,18 @@ msgstr ""
 "i livelli e ogni altro aspetto del tuo lavoro. Una volta che  il progetto è "
 "completato, puoi salvarlo in JPEG, PNG, GIF, ..."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
 msgstr ""
+"Puoi muovere una selezione premendo <tt>Alt</tt> mentre trascini la "
+"selezione. Se si dovesse muovere la finestra, vuol dire che il tuo window "
+"manager usa già il tasto <tt>Alt</tt>. Prova a premere allo stesso tempo "
+"anche il tasto <tt>Shift</tt> o <tt>Ctrl</tt>."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -287,10 +283,10 @@ msgstr ""
 "Puoi modificare l'intervallo di selezione per la selezione fuzzy cliccando e "
 "trascinando a sinistra o a destra."
 
-#: tips/gimp-tips.xml.in.h:27
+#: tips/gimp-tips.xml.in.h:26
 #, fuzzy
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
@@ -298,7 +294,7 @@ msgstr ""
 "finestra di dialogo Tracciati ti permette di lavorare con molteplici "
 "tracciati e di convertirli in selezione."
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
@@ -307,7 +303,7 @@ msgstr ""
 "finestra degli strumenti, verrà creata una nuova immagine contenente solo "
 "quel livello."
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
@@ -316,6 +312,17 @@ msgstr ""
 "Puoi trascinare molte cose in GIMP. Per esempio, trascinando un colore dalla "
 "finestra degli strumenti o da un colore della palette e rilasciandolo "
 "nell'immagine riempirai l'immagine corrente o la selezione con quel colore."
+
+#: tips/gimp-tips.xml.in.h:29
+#, fuzzy
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr ""
+"Usando Modifica &gt;Sbarra potrai disegnare semplici quadrati o cerchi "
+"tracciando la selezione corrente con il pennello attivo. Forme più complesse "
+"possono essere disegnate con Filtri-&gt;Render&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -384,13 +391,3 @@ msgstr ""
 "bottone \"Maschera veloce\" in basso a sinistra della finestra "
 "dell'immagine, cambia la selezione disegnando nell'immagine e clicca di "
 "nuovo sul bottone per convertirla ad una selezione normale."
-
-#~ msgid ""
-#~ "You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If "
-#~ "this makes the window move, your window manager uses the <tt>Alt</tt> key "
-#~ "already. Try pressing <tt>Shift</tt> at the same time."
-#~ msgstr ""
-#~ "Puoi muovere una selezione premendo <tt>Alt</tt> mentre trascini la "
-#~ "selezione. Se si dovesse muovere la finestra, vuol dire che il tuo window "
-#~ "manager usa già il tasto <tt>Alt</tt>. Prova a premere allo stesso tempo "
-#~ "anche il tasto <tt>Shift</tt> o <tt>Ctrl</tt>."
