--- a/tips/pt.po
+++ b/tips/pt.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 2.6\n"
-"Report-Msgid-Bugs-To: Duarte Loreto <happyguy_pt@hotmail.com>\n"
-"POT-Creation-Date: 2003-07-21 00:18+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-03-05 00:12+0100\n"
 "PO-Revision-Date: 2004-01-11 02:40+0000\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
@@ -46,8 +46,8 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:5
 #, fuzzy
 msgid ""
-"<tt>Ctrl</tt>-drag with the Transform tool in rotation mode will constrain "
-"the rotation to 15 degree angles."
+"<tt>Ctrl</tt>-drag with the Rotate tool will constrain the rotation to 15 "
+"degree angles."
 msgstr ""
 "Arrastar-<tt>Ctrl</tt> com a ferramenta de Rotação irá restringir a rotação "
 "a ângulos de 15 graus."
@@ -78,8 +78,8 @@ msgstr ""
 msgid ""
 "After you enabled \"Dynamic Keyboard Shortcuts\" in the Preferences dialog, "
 "you can reassign shortcut keys. Do so by bringing up the menu, selecting a "
-"menu item, and pressing the desired key combination. This is saved when you "
-"exit GIMP."
+"menu item, and pressing the desired key combination. If \"Save Keyboard "
+"Shortcuts\" is enabled, the key bindings are saved when you exit GIMP."
 msgstr ""
 "Após activar \"Atalhos de Teclado Dinâmicos\" no diálogo de Preferências, "
 "pode redefinir teclas de atalho. Para o fazer, faça surgir o menu, "
@@ -113,9 +113,9 @@ msgstr ""
 #: tips/gimp-tips.xml.in.h:11
 #, fuzzy
 msgid ""
-"If you stroke a path (Edit-&gt;Stroke), the current drawing tool and its "
-"settings are used. You can use the Paintbrush in gradient mode, the Clone "
-"tool with a pattern or even the Eraser or the Smudge tool."
+"If you stroke a path (Edit-&gt;Stroke Path), the paint tools can be used "
+"with their current settings. You can use the Paintbrush in gradient mode or "
+"even the Eraser or the Smudge tool."
 msgstr ""
 "Se tiver desenhado um caminho (Editar-&gt;Selecção Pincelar), as ferramentas "
 "de desenho podem ser utilizadas com as suas definições actuais. Pode "
@@ -135,7 +135,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Most plug-ins work on the current layer of the current image. In some cases, "
-"you will have to merge all layers (Layers-&gt;Flatten Image) if you want the "
+"you will have to merge all layers (Image-&gt;Flatten Image) if you want the "
 "plug-in to work on the whole image."
 msgstr ""
 "A maioria dos plug-ins funciona na camada actual da imagem actual. Nalguns "
@@ -156,8 +156,8 @@ msgstr ""
 msgid ""
 "Not all effects can be applied to all kinds of images. This is indicated by "
 "a grayed-out menu-entry. You may need to change the image mode to RGB (Image-"
-"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Add Alpha Channel) or "
-"flatten it (Layers-&gt;Flatten Image)."
+"&gt;Mode-&gt;RGB), add an alpha-channel (Layers-&gt;Transparency-&gt;Add "
+"Alpha Channel) or flatten it (Image-&gt;Flatten Image)."
 msgstr ""
 "Nem todos os efeitos podem ser aplicados a todos os tipos de imagens. Isto é "
 "indicado por uma opção de menu cinzenta. Poderá ter de alterar o modo da "
@@ -233,18 +233,6 @@ msgstr ""
 "guias."
 
 #: tips/gimp-tips.xml.in.h:22
-#, fuzzy
-msgid ""
-"Using Edit-&gt;Stroke allows you to draw simple squares or circles by "
-"painting the edge of your current selection with the active brush. More "
-"complex shapes can be drawn with Filters-&gt;Render-&gt;Gfig."
-msgstr ""
-"Pode desenhar quadrados ou círculos simples utilizando Editar-&gt;Selecção "
-"Pincelada. Pincela a margem da sua selecção actual. Formas mais complexas "
-"podem ser desenhadas com a ferramenta de Caminhos ou com Filtros-&gt;"
-"Renderizar-&gt;Gfig."
-
-#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When using a drawing tool (Paintbrush, Airbrush, or Pencil), <tt>Shift</tt>-"
 "click will draw a straight line from your last drawing point to your current "
@@ -256,7 +244,7 @@ msgstr ""
 "posição de desenho até à posição actual do cursor. Se também primir o "
 "<tt>Ctrl</tt>, a linha será limitada a ângulos de 15 graus."
 
-#: tips/gimp-tips.xml.in.h:24
+#: tips/gimp-tips.xml.in.h:23
 msgid ""
 "When you save an image to work on it again later, try using XCF, the GIMP's "
 "native file format (use the file extension <tt>.xcf</tt>). This preserves "
@@ -268,11 +256,17 @@ msgstr ""
 "tt>). Isto preserva as camadas e todos os aspectos do seu trabalho-em-curso. "
 "Uma vez completo o projecto, grave-o como JPEG, PNG, GIF, ..."
 
-#: tips/gimp-tips.xml.in.h:25
-msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
-msgstr "Pode ajustar e re-colocar uma selecção com arrastar-<tt>Alt</tt>."
+#: tips/gimp-tips.xml.in.h:24
+msgid ""
+"You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If this "
+"makes the window move, your window manager uses the <tt>Alt</tt> key "
+"already. Try pressing <tt>Shift</tt> at the same time."
+msgstr ""
+"Pode ajustar e deslocar uma selecção utilizando arrastar-<tt>Alt</tt>. Se "
+"isto fizer a janela deslocar-se, o seu gestor de janelas já utiliza a tecla "
+"<tt>Alt</tt>. Tente primir <tt>Shift</tt> simultaneamente."
 
-#: tips/gimp-tips.xml.in.h:26
+#: tips/gimp-tips.xml.in.h:25
 msgid ""
 "You can adjust the selection range for fuzzy select by clicking and dragging "
 "left and right."
@@ -280,10 +274,10 @@ msgstr ""
 "Pode ajustar o alcance da selecção de uma selecção livre clicando e "
 "arrastando para a esquerda e direita."
 
-#: tips/gimp-tips.xml.in.h:27
+#: tips/gimp-tips.xml.in.h:26
 #, fuzzy
 msgid ""
-"You can create and edit complex selections using the Bezier tool. The Paths "
+"You can create and edit complex selections using the Path tool. The Paths "
 "dialog allows you to work on multiple paths and to convert them to "
 "selections."
 msgstr ""
@@ -291,7 +285,7 @@ msgstr ""
 "O diálogo de Caminhos permite-lhe trabalhar em múltiplos caminhos e converte-"
 "los em selecções."
 
-#: tips/gimp-tips.xml.in.h:28
+#: tips/gimp-tips.xml.in.h:27
 msgid ""
 "You can drag a layer from the Layers dialog and drop it onto the toolbox. "
 "This will create a new image containing only that layer."
@@ -299,7 +293,7 @@ msgstr ""
 "Pode arrastar uma camada do diálogo Camadas e larga-la na caixa de "
 "ferramentas. Isto irá criar uma nova imagem contendo apenas aquela camada."
 
-#: tips/gimp-tips.xml.in.h:29
+#: tips/gimp-tips.xml.in.h:28
 msgid ""
 "You can drag and drop many things in the GIMP. For example, dragging a color "
 "from the toolbox or from a color palette and dropping it into an image will "
@@ -308,6 +302,18 @@ msgstr ""
 "Pode arrastar e largar muitas coisas no GIMP.  Por exemplo, arrastar uma cor "
 "da caixa de ferramentas ou de uma paleta de cores e larga-la numa imagem irá "
 "encher a imagem actual ou a selecção com essa cor."
+
+#: tips/gimp-tips.xml.in.h:29
+#, fuzzy
+msgid ""
+"You can draw simple squares or circles using Edit-&gt;Stroke Selection. It "
+"strokes the edge of your current selection. More complex shapes can be drawn "
+"using the Path tool or with Filters-&gt;Render-&gt;Gfig."
+msgstr ""
+"Pode desenhar quadrados ou círculos simples utilizando Editar-&gt;Selecção "
+"Pincelada. Pincela a margem da sua selecção actual. Formas mais complexas "
+"podem ser desenhadas com a ferramenta de Caminhos ou com Filtros-&gt;"
+"Renderizar-&gt;Gfig."
 
 #: tips/gimp-tips.xml.in.h:30
 msgid ""
@@ -375,14 +381,8 @@ msgstr ""
 "Altere a sua selecção pintando a imagem e clique novamente no botão para a "
 "converter novamente numa selecção normal."
 
-#~ msgid ""
-#~ "You can adjust and re-place a selection by using <tt>Alt</tt>-drag. If "
-#~ "this makes the window move, your window manager uses the <tt>Alt</tt> key "
-#~ "already. Try pressing <tt>Shift</tt> at the same time."
-#~ msgstr ""
-#~ "Pode ajustar e deslocar uma selecção utilizando arrastar-<tt>Alt</tt>. Se "
-#~ "isto fizer a janela deslocar-se, o seu gestor de janelas já utiliza a "
-#~ "tecla <tt>Alt</tt>. Tente primir <tt>Shift</tt> simultaneamente."
+#~ msgid "You can adjust and re-place a selection by using <tt>Alt</tt>-drag."
+#~ msgstr "Pode ajustar e re-colocar uma selecção com arrastar-<tt>Alt</tt>."
 
 #~ msgid ""
 #~ "If your fonts turn out blocky, that's because they're not scalable fonts. "
